[package]
name = "minimizer-queue"
version = "1.2.3"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
description = "Fast computation of minimizers using a monotone queue"
readme = "README.md"
exclude = [".github/**", ".gitignore"]
repository = "https://github.com/rust-seq/minimizer-queue"
homepage = "https://crates.io/crates/minimizer-queue"
documentation = "https://docs.rs/minimizer-queue"
license = "MIT"
keywords = ["minimizer", "queue", "monotone", "hash"]
categories = ["data-structures"]
edition = "2021"

[dependencies]
strength_reduce = "0.2"
wyhash2 = "0.2"

[dev-dependencies]
nohash-hasher = "0.2"
